# game_engine

./: Cargo.toml  build.rs  install.sh
shaders/: tex_image.frag  triangle.vert
src/: lib.rs  main.rs  vulkan_renderer.rs  vulkan_rs.rs
src/vulkan_rs/: allocation.rs  debug.rs  descriptor.rs  device.rs  immediate_submit.rs  instance.rs  mesh.rs  physical_device.rs  pipelines.rs  shader.rs  swapchain.rs  window.rs
