[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.5"
ash = "0.38.0"
raw-window-handle = "0.6.2"
log = "0.4.22"
env_logger = "0.11.5"
gpu-allocator = "0.27.0"
egui = "0.29.1"
egui-winit = "0.29.1"
# to safely convert nalbegra types (+structs holding those) to &[u8]
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
presser = "0.3.1"
